feat: Se implemento resultados de los partidos, liquidación automática y consulta de estado :white_check_mark: :construction_worker:
